Last fix for the gallery spacing.. Can't get words to wrap v2...

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,8 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 1.5rem; }
+  padding: 1.5rem;
+  overflow: hidden; }
   @media (max-width: 37.5em) {
     body {
       padding: 0;
