--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -49,6 +49,7 @@ html {
 body {
   box-sizing: border-box;
   padding: 1.5rem;
+  overflow: hidden;
 
   @include respond(phone) {
     padding: 0;
